Remove clever PARAM conversion into native types. b=199163 r=dbradley@netscape.com sr=alecf@netscape.com